[tool.poetry]
name = "pytest-exasol-extension"
version = "0.2.0"
description = ""
authors = ["Mikhail Beck <mikhail.beck@exasol.com>"]
readme = "README.md"
packages = [{include = "exasol"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pytest = ">=7,<9"
pytest-exasol-backend = ">=0.2.0"
pyexasol = ">=0.26.0,<1"
exasol-python-extension-common = ">=0.7.0,<1"

[tool.poetry.plugins.pytest11]
ext = "exasol.pytest_extension"

[tool.poetry.group.dev.dependencies]
exasol-toolbox = ">=0.15.0,<1"
exasol-bucketfs = ">=0.13.0,<1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 8.1
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
    "exasol.toolbox.*",
    "pyexasol.*",
]
ignore_errors = true
ignore_missing_imports = true

