[project]
name = "pytest-exasol-extension"
version = "0.2.2"
requires-python = ">=3.10,<4.0"
description = ""
authors = [
    {name="Mikhail Beck", email="mikhail.beck@exasol.com"}
]
readme = "README.md"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [{include = "exasol"}]

[tool.poetry.dependencies]
pytest = ">=7,<9"
pytest-exasol-backend = ">=0.2.0"
pyexasol = ">=0.26.0,<1"
exasol-python-extension-common = ">=0.9.0,<1"

[tool.poetry.plugins.pytest11]
ext = "exasol.pytest_extension"

[tool.poetry.group.dev.dependencies]
exasol-toolbox = "^1.1.0"
exasol-bucketfs = ">=1.0.0"
click = "^8.1.7"

[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 6.7
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
    "exasol.pytest_backend.*",
    "pyexasol.*",
]
ignore_errors = true
ignore_missing_imports = true

