[tool.poetry]
name = "pytest-exasol-itde"
version = "0.1.0"
description = ""
authors = ["Nicola Coretti <nicola.coretti@exasol.com>"]
readme = "README.md"
packages = [{include = "exasol", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pytest = ">=7"
exasol-integration-test-docker-environment = ">=2"
pyexasol = ">=0.25"

[tool.poetry.plugins.pytest11]
itde = "exasol.pytest_itde"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
