[project]
name = "pytest-exasol-itde"
version = "0.2.1"
description = ""
authors = [
    {name="Nicola Coretti", email="nicola.coretti@exasol.com"}
]
readme = "README.rst"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [{include = "exasol"}]

[tool.poetry.dependencies]
python = ">=3.9.2,<4"
pytest = ">=7,<9"
exasol-integration-test-docker-environment = "^3.1.0"
pyexasol = ">=0.25,<1"

[tool.poetry.plugins.pytest11]
itde = "exasol.pytest_itde"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.poetry.group.dev.dependencies]
exasol-toolbox = "^1.0.0"

[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 7.8
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
    "exasol.toolbox.*",
    "pyexasol.*",
    "exasol_integration_test_docker_environment.*",
]
ignore_errors = true
ignore_missing_imports = true

