[tool.poetry]
name = "pytest-exasol-saas"
version = "0.1.0"
description = ""
authors = ["Christoph Kuhnke <christoph.kuhnke@exasol.com>"]
readme = "README.rst"
packages = [{include = "exasol"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pytest = ">=7,<9"
# pyexasol = "^0.25"
exasol-saas-api = "^0.4.0"

[tool.poetry.plugins.pytest11]
saas = "exasol.pytest_saas" # exasol_saas_api


[tool.poetry.group.dev.dependencies]
exasol-toolbox = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 8.1
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
    "exasol.toolbox.*",
    "pyexasol.*",
    "exasol.saas.client.*",
]
ignore_errors = true
ignore_missing_imports = true

