[tool.poetry]
name = "pytest-exasol-saas"
version = "0.1.0"
description = ""
authors = ["Christoph Kuhnke <christoph.kuhnke@exasol.com>"]
readme = "README.md"
packages = [{include = "exasol"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pytest = ">=7,<9"
exasol-saas-api = "^0.5.0"
pyyaml = "^6.0.1"

[tool.poetry.plugins.pytest11]
saas = "exasol.pytest_saas"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.poetry.group.dev.dependencies]
exasol-toolbox = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 8.1
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
    "exasol.toolbox.*",
    "pyexasol.*",
    "exasol.saas.client.*",
]
ignore_errors = true
ignore_missing_imports = true

